--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "floating-ui"
-version = "0.0.1"
+version = "0.0.2"
 authors = ["Henry Bersey"]
 edition = "2021"
 description = "Rust bindings for Floating UI "
@@ -17,3 +17,4 @@ web-sys = { version = "0.3", features = ["HtmlDocument", "HtmlElement", "CssStyl
 js-sys = "0.3.69"
 thiserror = "1.0"
 static_assertions = "1.1.0"
+utility-macros = "0.0.2"
